Correction XGBoost Model

--- a/Modeling/XGBoost/model.ipynb
+++ b/Modeling/XGBoost/model.ipynb
@@ -2,18 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import javalang\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from imblearn.over_sampling import SMOTE\n",
     "import xgboost as xgb\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer"
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,42 +28,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read and tokenize files\n",
-    "def read_and_tokenize(files):\n",
+    "def read_and_tokenize(directory):\n",
     "    token_lists = []\n",
-    "    for file in files:\n",
-    "        with open(file, 'r') as f:\n",
-    "            content = f.read()\n",
-    "            tokens = extract_tokens(content)\n",
-    "            token_lists.append(tokens)\n",
+    "    for filename in os.listdir(directory):\n",
+    "        if filename.endswith('.java'):\n",
+    "            filepath = os.path.join(directory, filename)\n",
+    "            with open(filepath, 'r') as f:\n",
+    "                content = f.read()\n",
+    "                tokens = extract_tokens(content)\n",
+    "                token_lists.append(tokens)\n",
     "    return token_lists"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Paths to your training and test directories\n",
+    "train_noplag_dir = r'C:\\Users\\droid\\Documents\\Aplicaciones_Avanzadas\\Proyecto\\PlagiarismDetector\\finalDataset\\split\\train\\noplag'\n",
+    "train_plagio_dir = r'C:\\Users\\droid\\Documents\\Aplicaciones_Avanzadas\\Proyecto\\PlagiarismDetector\\finalDataset\\split\\train\\plagio'\n",
+    "test_noplag_dir = r'C:\\Users\\droid\\Documents\\Aplicaciones_Avanzadas\\Proyecto\\PlagiarismDetector\\finalDataset\\split\\test\\noplag'\n",
+    "test_plagio_dir = r'C:\\Users\\droid\\Documents\\Aplicaciones_Avanzadas\\Proyecto\\PlagiarismDetector\\finalDataset\\split\\test\\plagio'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read and tokenize all .java files in the directories\n",
+    "train_noplag_tokens = read_and_tokenize(train_noplag_dir)\n",
+    "train_plagio_tokens = read_and_tokenize(train_plagio_dir)\n",
+    "test_noplag_tokens = read_and_tokenize(test_noplag_dir)\n",
+    "test_plagio_tokens = read_and_tokenize(test_plagio_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Combine the tokens and create labels\n",
+    "train_tokens = train_noplag_tokens + train_plagio_tokens\n",
+    "train_labels = [0] * len(train_noplag_tokens) + [1] * len(train_plagio_tokens)\n",
+    "\n",
+    "test_tokens = test_noplag_tokens + test_plagio_tokens\n",
+    "test_labels = [0] * len(test_noplag_tokens) + [1] * len(test_plagio_tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Vectorize the training tokens\n",
+    "vectorizer = TfidfVectorizer(analyzer=lambda x: x)  # Pass the tokens directly\n",
+    "X_train = vectorizer.fit_transform(train_tokens)\n",
+    "\n",
+    "# Use the fitted vectorizer to transform the test tokens\n",
+    "X_test = vectorizer.transform(test_tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Apply SMOTE to balance the training data\n",
+    "smote = SMOTE(random_state=42)\n",
+    "X_train_res, y_train_res = smote.fit_resample(X_train, train_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert to DMatrix for XGBoost\n",
+    "dtrain = xgb.DMatrix(X_train_res, label=y_train_res)\n",
+    "dtest = xgb.DMatrix(X_test, label=test_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train the XGBoost model\n",
+    "params = {\n",
+    "    'max_depth': 6,\n",
+    "    'eta': 0.3,\n",
+    "    'objective': 'binary:logistic',\n",
+    "    'scale_pos_weight': len(train_noplag_tokens) / len(train_plagio_tokens)  # Adjusting for imbalance\n",
+    "}\n",
+    "num_round = 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bst = xgb.train(params, dtrain, num_round)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Predict and evaluate\n",
+    "preds = bst.predict(dtest)\n",
+    "predictions = [1 if pred > 0.5 else 0 for pred in preds]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'train_files' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m train_tokens \u001b[38;5;241m=\u001b[39m read_and_tokenize(\u001b[43mtrain_files\u001b[49m)\n\u001b[0;32m      2\u001b[0m test_tokens \u001b[38;5;241m=\u001b[39m read_and_tokenize(test_files)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'train_files' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.6274038461538461\n",
+      "Precision: 0.7203065134099617\n",
+      "Recall: 0.6962962962962963\n"
      ]
     }
    ],
    "source": [
+    "accuracy = accuracy_score(test_labels, predictions)\n",
+    "precision = precision_score(test_labels, predictions)\n",
+    "recall = recall_score(test_labels, predictions)\n",
+    "f1 = f1_score(test_labels, predictions)\n",
     "\n",
-    "train_tokens = read_and_tokenize(train_files)\n",
-    "test_tokens = read_and_tokenize(test_files)"
+    "print(f'Accuracy: {accuracy}')\n",
+    "print(f'Precision: {precision}')\n",
+    "print(f'Recall: {recall}')"
    ]
   }
  ],
@@ -80,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
