--- a/Modeling/XGBoost/xgboost_alldata.ipynb
+++ b/Modeling/XGBoost/xgboost_alldata.ipynb
@@ -2,243 +2,128 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model training complete.\n"
+      "Train Accuracy: 1.0\n",
+      "Train Loss: 0.008322178832434631\n",
+      "Test Accuracy: 0.8516483516483516\n",
+      "Test Loss: 0.5141247761156819\n",
+      "Confusion Matrix:\n",
+      "[[119   6]\n",
+      " [ 21  36]]\n",
+      "Prediction for the external files: 1\n"
      ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "from sklearn.utils import resample\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "import xgboost as xgb\n",
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define paths\n",
-    "data_path = r'C:\\Users\\droid\\Documents\\Aplicaciones_Avanzadas\\Proyecto\\PlagiarismDetector\\finalDataset\\javafiles'\n",
-    "labels_path = r'C:\\Users\\droid\\Documents\\Aplicaciones_Avanzadas\\Proyecto\\PlagiarismDetector\\finalDataset\\unify_labels\\javafiles_labels.csv'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load the labels\n",
-    "df_labels = pd.read_csv(labels_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Balance the dataset\n",
-    "df_majority = df_labels[df_labels.veredict == 0]\n",
-    "df_minority = df_labels[df_labels.veredict == 1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Upsample minority class\n",
-    "df_minority_upsampled = resample(df_minority, \n",
-    "                                 replace=True,     \n",
-    "                                 n_samples=len(df_majority),    \n",
-    "                                 random_state=123)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Combine majority class with upsampled minority class\n",
-    "df_balanced = pd.concat([df_majority, df_minority_upsampled])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Shuffle the dataset\n",
-    "df_balanced = df_balanced.sample(frac=1, random_state=42).reset_index(drop=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Read Java files, preprocess and extract features\n",
-    "def read_java_files(sub1, sub2):\n",
-    "    # Build paths to java files\n",
-    "    path1 = os.path.join(data_path, f\"{sub1}.java\")\n",
-    "    path2 = os.path.join(data_path, f\"{sub2}.java\")\n",
-    "    \n",
-    "    try:\n",
-    "        with open(path1, 'r', encoding='utf-8') as file:\n",
-    "            content1 = file.read()\n",
-    "        with open(path2, 'r', encoding='utf-8') as file:\n",
-    "            content2 = file.read()\n",
-    "    except FileNotFoundError:\n",
-    "        content1, content2 = \"\", \"\"\n",
-    "    \n",
-    "    return content1 + \" \" + content2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Apply the function to read Java files\n",
-    "df_balanced['text'] = df_balanced.apply(lambda x: read_java_files(x['sub1'], x['sub2']), axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Feature extraction with CountVectorizer\n",
-    "vectorizer = CountVectorizer(max_features=1000)  # Adjust number of features\n",
-    "X = vectorizer.fit_transform(df_balanced['text']).toarray()\n",
-    "y = df_balanced['veredict'].values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Split the data into training and testing sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.30, random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Initialize XGBoost model\n",
-    "xgb_model = xgb.XGBClassifier(use_label_encoder=False, eval_metric='logloss')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Train the model\n",
-    "xgb_model.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Model is now trained and can be used for predictions or evaluation\n",
-    "print(\"Model training complete.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
+    "import joblib\n",
+    "import javalang\n",
     "import numpy as np\n",
-    "from sklearn.metrics import accuracy_score, log_loss, confusion_matrix\n",
+    "import pandas as pd\n",
     "import xgboost as xgb\n",
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "import os\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix, log_loss\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "\n",
-    "# Load trained model and vectorizer\n",
-    "xgb_model = xgb.XGBClassifier()  # Assuming model is loaded\n",
-    "vectorizer = CountVectorizer()  # Assuming vectorizer is loaded\n",
+    "# Load the preprocessed data\n",
+    "data_path = r'C:\\Users\\droid\\Documents\\Aplicaciones_Avanzadas\\Proyecto\\PlagiarismDetector\\preprocessed_alldata.pkl'\n",
+    "X, y, tfidf_vectorizer = joblib.load(data_path)\n",
     "\n",
-    "# Define function to evaluate the model\n",
-    "def evaluate_model(X_train, y_train, X_test, y_test):\n",
-    "    # Predictions on training set\n",
-    "    train_preds = xgb_model.predict(X_train)\n",
-    "    train_preds_proba = xgb_model.predict_proba(X_train)[:, 1]\n",
-    "    train_accuracy = accuracy_score(y_train, train_preds)\n",
-    "    train_loss = log_loss(y_train, train_preds_proba)\n",
-    "    \n",
-    "    # Predictions on test set\n",
-    "    test_preds = xgb_model.predict(X_test)\n",
-    "    test_preds_proba = xgb_model.predict_proba(X_test)[:, 1]\n",
-    "    test_accuracy = accuracy_score(y_test, test_preds)\n",
-    "    test_loss = log_loss(y_test, test_preds_proba)\n",
-    "    \n",
-    "    # Confusion matrix\n",
-    "    cm = confusion_matrix(y_test, test_preds)\n",
-    "    \n",
-    "    print(\"Training Accuracy:\", train_accuracy)\n",
-    "    print(\"Training Loss:\", train_loss)\n",
-    "    print(\"Test Accuracy:\", test_accuracy)\n",
-    "    print(\"Test Loss:\", test_loss)\n",
-    "    print(\"Confusion Matrix:\\n\", cm)\n",
+    "# Split the data into training and test sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Example of using evaluate_model function\n",
-    "# evaluate_model(X_train, y_train, X_test, y_test)  # Uncomment and use actual data\n",
+    "# Train the XGBoost model\n",
+    "model = xgb.XGBClassifier(use_label_encoder=False, eval_metric='logloss')\n",
+    "model.fit(X_train, y_train)\n",
     "\n",
-    "# Function to test the model with new Java files\n",
-    "def test_new_java_files(file_path1, file_path2):\n",
-    "    # Read the Java files\n",
-    "    try:\n",
-    "        with open(file_path1, 'r', encoding='utf-8') as file:\n",
-    "            content1 = file.read()\n",
-    "        with open(file_path2, 'r', encoding='utf-8') as file:\n",
-    "            content2 = file.read()\n",
-    "        content = content1 + \" \" + content2\n",
-    "    except FileNotFoundError:\n",
-    "        return \"File not found.\"\n",
-    "    \n",
-    "    # Process the content through the vectorizer\n",
-    "    content_vector = vectorizer.transform([content]).toarray()\n",
-    "    \n",
-    "    # Make prediction\n",
-    "    prediction = xgb_model.predict(content_vector)\n",
-    "    prediction_proba = xgb_model.predict_proba(content_vector)[0, 1]\n",
-    "    \n",
-    "    return f\"Prediction: {'Plagiarism' if prediction[0] == 1 else 'No Plagiarism'}, Probability: {prediction_proba:.4f}\"\n",
+    "# Predict on training data\n",
+    "y_train_pred = model.predict(X_train)\n",
+    "train_acc = accuracy_score(y_train, y_train_pred)\n",
+    "train_loss = log_loss(y_train, model.predict_proba(X_train))\n",
     "\n",
-    "# Example of testing new Java files\n",
-    "# result = test_new_java_files('path_to_file1.java', 'path_to_file2.java')\n",
-    "# print(result)"
+    "# Predict on test data\n",
+    "y_test_pred = model.predict(X_test)\n",
+    "test_acc = accuracy_score(y_test, y_test_pred)\n",
+    "test_loss = log_loss(y_test, model.predict_proba(X_test))\n",
+    "\n",
+    "# Compute confusion matrix\n",
+    "conf_matrix = confusion_matrix(y_test, y_test_pred)\n",
+    "\n",
+    "# Print metrics\n",
+    "print(f\"Train Accuracy: {train_acc}\")\n",
+    "print(f\"Train Loss: {train_loss}\")\n",
+    "print(f\"Test Accuracy: {test_acc}\")\n",
+    "print(f\"Test Loss: {test_loss}\")\n",
+    "print(\"Confusion Matrix:\")\n",
+    "print(conf_matrix)\n",
+    "\n",
+    "# Save the trained model\n",
+    "model_path = r'C:\\Users\\droid\\Documents\\Aplicaciones_Avanzadas\\Proyecto\\PlagiarismDetector\\xgboost_model.pkl'\n",
+    "joblib.dump(model, model_path)\n",
+    "\n",
+    "# Function to test the model using external files\n",
+    "def test_model_on_external_files(file1_path, file2_path, model_path, tfidf_vectorizer):\n",
+    "    model = joblib.load(model_path)\n",
+    "    \n",
+    "    def read_java_file(file_path):\n",
+    "        with open(file_path, 'r', encoding='utf-8') as file:\n",
+    "            content = file.read()\n",
+    "        return content\n",
+    "\n",
+    "    def extract_ast_nodes(code):\n",
+    "        try:\n",
+    "            tokens = list(javalang.tokenizer.tokenize(code))\n",
+    "            parser = javalang.parser.Parser(tokens)\n",
+    "            tree = parser.parse()\n",
+    "\n",
+    "            ast_nodes = []\n",
+    "            for path, node in tree:\n",
+    "                if isinstance(node, javalang.tree.Node):\n",
+    "                    ast_nodes.append(node.__class__.__name__)\n",
+    "            return ' '.join(ast_nodes)\n",
+    "        except (javalang.parser.JavaSyntaxError, javalang.tokenizer.LexerError) as e:\n",
+    "            print(f\"Error parsing Java code: {e}\")\n",
+    "            return ''\n",
+    "\n",
+    "    code1 = read_java_file(file1_path)\n",
+    "    code2 = read_java_file(file2_path)\n",
+    "    ast_nodes1 = extract_ast_nodes(code1)\n",
+    "    ast_nodes2 = extract_ast_nodes(code2)\n",
+    "\n",
+    "    if ast_nodes1 and ast_nodes2:\n",
+    "        combined_ast_nodes = ast_nodes1 + ' ' + ast_nodes2\n",
+    "        combined_features = tfidf_vectorizer.transform([combined_ast_nodes])\n",
+    "        \n",
+    "        ast_set1 = set(ast_nodes1.split())\n",
+    "        ast_set2 = set(ast_nodes2.split())\n",
+    "\n",
+    "        # Calculate additional features\n",
+    "        jaccard_similarity = len(ast_set1.intersection(ast_set2)) / len(ast_set1.union(ast_set2)) if len(ast_set1.union(ast_set2)) != 0 else 0\n",
+    "        vec1 = tfidf_vectorizer.transform([ast_nodes1]).toarray()[0]\n",
+    "        vec2 = tfidf_vectorizer.transform([ast_nodes2]).toarray()[0]\n",
+    "        manhattan_distance = np.sum(np.abs(vec1 - vec2))\n",
+    "\n",
+    "        # Combine all features\n",
+    "        additional_features = np.array([[manhattan_distance, jaccard_similarity]])\n",
+    "        combined_features = np.hstack((combined_features.toarray(), additional_features))\n",
+    "\n",
+    "        # Predict using the model\n",
+    "        prediction = model.predict(combined_features)\n",
+    "        return prediction[0]\n",
+    "    else:\n",
+    "        print(\"Error: AST extraction failed for one or both files.\")\n",
+    "        return None\n",
+    "\n",
+    "# Example usage of the test function\n",
+    "file1 = r'C:\\Users\\droid\\Documents\\Aplicaciones_Avanzadas\\Proyecto\\PlagiarismDetector\\Modeling\\RandomForest\\OriginalJava.java'\n",
+    "file2 = r'C:\\Users\\droid\\Documents\\Aplicaciones_Avanzadas\\Proyecto\\PlagiarismDetector\\Modeling\\RandomForest\\PlagiarizedJava.java'\n",
+    "result = test_model_on_external_files(file1, file2, model_path, tfidf_vectorizer)\n",
+    "print(f\"Prediction for the external files: {result}\")\n"
    ]
   }
  ],
