--- a/Modeling/XGBoost/xgboost_alldata.ipynb
+++ b/Modeling/XGBoost/xgboost_alldata.ipynb
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -668,8 +668,8 @@
    ],
    "source": [
     "# Example usage of the test function\n",
-    "file1 = r'C:\\Users\\droid\\Documents\\Aplicaciones_Avanzadas\\Proyecto\\PlagiarismDetector\\Modeling\\RandomForest\\OriginalJava.java'\n",
-    "file2 = r'C:\\Users\\droid\\Documents\\Aplicaciones_Avanzadas\\Proyecto\\PlagiarismDetector\\Modeling\\RandomForest\\PlagiarizedJava.java'\n",
+    "file1 = r'C:\\Users\\droid\\Documents\\Aplicaciones_Avanzadas\\Proyecto\\PlagiarismDetector\\Modeling\\TestFiles\\case-04\\original\\T4.java'\n",
+    "file2 = r'C:\\Users\\droid\\Documents\\Aplicaciones_Avanzadas\\Proyecto\\PlagiarismDetector\\Modeling\\TestFiles\\case-04\\non-plagiarized\\02\\T04.java'\n",
     "result = test_model_on_external_files(file1, file2, model_path, tfidf_vectorizer)\n",
     "print(f\"Prediction for the external files: {result}\")"
    ]
