Add derivated metrics of the confusion matrix

--- a/Modeling/XGBoost/xgboost_alldata.ipynb
+++ b/Modeling/XGBoost/xgboost_alldata.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
     "import pandas as pd\n",
     "import xgboost as xgb\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score, confusion_matrix, log_loss\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix, log_loss, precision_score, recall_score, f1_score\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n"
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -551,6 +551,15 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision: 0.9365079365079365\n",
+      "Recall: 0.8939393939393939\n",
+      "F1 Score: 0.9147286821705426\n"
+     ]
     }
    ],
    "source": [
@@ -568,7 +577,17 @@
     "plt.xlabel('Predicted')\n",
     "plt.ylabel('Actual')\n",
     "plt.title('Confusion Matrix')\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# Calculate additional metrics\n",
+    "precision = precision_score(y_test, y_test_pred)\n",
+    "recall = recall_score(y_test, y_test_pred)\n",
+    "f1 = f1_score(y_test, y_test_pred)\n",
+    "\n",
+    "# Print metrics\n",
+    "print(f\"Precision: {precision}\")\n",
+    "print(f\"Recall: {recall}\")\n",
+    "print(f\"F1 Score: {f1}\")"
    ]
   },
   {
@@ -655,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
